# cmake-test-lib

./: CMakeLists.txt
include/pancake/core/: game.h
src/core/: game.cpp
